welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:3: error: ';' expected but 'if' found.
	}if(outsideMode){
         ^